--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -30,7 +30,7 @@ jobs:
             ${{ secrets.DOCKERHUB_USERNAME }}/practica-entrega-continua:latest
 
       - name: Trigger Render.com deployment
-        run: |
-          curl -X POST https://api.render.com/v1/services/${{ secrets.RENDER_SERVICE_ID }}/deploys \
-            -H "Authorization: Bearer ${{ secrets.RENDER_API_KEY }}" \
-            -H "Accept: application/json"
+          run: |
+    curl -X POST "https://api.render.com/v1/services/${{ secrets.RENDER_SERVICE_ID }}/deploys" \
+      -H "Authorization: Bearer ${{ secrets.RENDER_API_KEY }}" \
+      -H "Accept: application/json"
